--- a/src/scss/components/_edit-area-nav.scss
+++ b/src/scss/components/_edit-area-nav.scss
@@ -15,6 +15,8 @@ nav {
       bottom: 0.015rem solid $border;
       top: 0.015rem solid $border;
     }
+
+    // Styling borders around buttons
     // First button in menu
     &:nth-child(1) {
       border-bottom-left-radius: 0;
@@ -30,6 +32,7 @@ nav {
   // An active menu item will have distinct styling than inactive items
   .active {
     color: $highlight;
+
     &:hover {
       color: $highlight; // Color stay red
     }
