--- a/src/scss/components/_words-input.scss
+++ b/src/scss/components/_words-input.scss
@@ -1,4 +1,4 @@
-@use "../helpers" as *;
+@use '../helpers' as *;
 
 .words-input {
   left: 100%;
@@ -16,6 +16,8 @@
       font-family: $mono-font-family; // We use more readable for text entered by a user
       margin-bottom: 0.8rem;
       padding: 0.2rem;
+      border: 0.1rem solid $border;
+
       &:focus {
         border: 0.1rem solid $highlight;
         outline: 0.1rem solid $highlight;
