--- a/src/scss/components/_underline.scss
+++ b/src/scss/components/_underline.scss
@@ -11,7 +11,7 @@
   width: 30%;
 }
 
-// Moves underline based on the chosen menu option
+// These are classes that are added based on the chosen menu option. They are added to div element with ".underline" class
 .underline-text {
   left: 0;
 }
